--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,18 @@
   text-align: center;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
-@media (prefers-reduced-motion: no-preference) {
+/* 
+Keep for analog clock implementation
+ @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
   background-color: #282c34;
@@ -20,14 +22,16 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(300px + 2vmin);
   color: white;
 }
 
-.App-link {
+/* .App-link {
   color: #61dafb;
-}
+} */
 
+/*
+Useful for a future "analog" clock implementation? 
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -36,3 +40,4 @@
     transform: rotate(360deg);
   }
 }
+*/
