Save the CSS file dumby

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ Keep for analog clock implementation
   font-size: calc(300px + 2vmin);
   color: #242423;
 }
-/* dark text: #242423 */
+/* dark text: #2g42423 */
 /* brighter text: #282c34  */
 
 /* .App-link {
